add order link to footer for customer order page

--- a/AspMVCECommerce/Views/Shared/_Layout.cshtml
+++ b/AspMVCECommerce/Views/Shared/_Layout.cshtml
@@ -443,7 +443,7 @@
                                 <li><a href="~/Home/About">About Us</a></li>
                                 <li><a href="~/Home/Contact">Contact Us</a></li>
                                 <li><a href="~/Home/PrivacyPolicy">Privacy Policy</a></li>
-                                <li><a href="#">Orders and Returns</a></li>
+                                <li><a href="~/Home/Order">Orders and Returns</a></li>
                                 <li><a href="~/Home/TermsAndCondition">Terms & Conditions</a></li>
                             </ul>
                         </div>
@@ -462,20 +462,22 @@
                                     {
                                         <li><a href="~/Home/ShoppingCart">View Cart</a></li>
                                         <li><a href="~/Home/WishList">Wishlist</a></li>
+                                        <li><a href="~/Home/Order">Track My Order</a></li>
                                     }
                                     else
                                     {
                                         <li><a href="~/Account/Login">View Cart</a></li>
                                         <li><a href="~/Account/Login">Wishlist</a></li>
+                                        <li><a href="~/Account/Login">Track My Order</a></li>
                                     }
                                 }
                                 else
                                 {
                                     <li><a href="~/Account/Login">View Cart</a></li>
                                     <li><a href="~/Account/Login">Wishlist</a></li>
+                                    <li><a href="~/Account/Login">Track My Order</a></li>
                                 }
 
-                                <li><a href="#">Track My Order</a></li>
                                 <li><a href="#">Help</a></li>
                             </ul>
                         </div>
