add shopping cart and wishlist guide

--- a/AspMVCECommerce/Views/Home/Help.cshtml
+++ b/AspMVCECommerce/Views/Home/Help.cshtml
@@ -37,12 +37,12 @@
             <div class="col-md-12">
                 <br />
                 <br />
-                <h3>Add Product to WishList</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><b>1.</b> Navigate to paypal sandbox website: <a target="_blank" href="https://www.sandbox.paypal.com/ph/home">https://www.sandbox.paypal.com/ph/home</a> then click Sign Up</span>
+                <h3>Manage WishList</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/WishlistGuide">How to add, remove and view wishlist product's'</a></span>
                 <br />
                 <br />
-                <h3>Add Product to Cart</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><b>1.</b> Navigate to paypal sandbox website: <a target="_blank" href="https://www.sandbox.paypal.com/ph/home">https://www.sandbox.paypal.com/ph/home</a> then click Sign Up</span>
+                <h3>Manage Shopping Cart</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/ShoppingCartGuide">How to add, remove, view and checkout shopping cart</a></span>
                 <br />
                 <br />
                 <h3>Paypal Payment</h3>
