--- a/AspMVCECommerce/Views/Shared/_Layout.cshtml
+++ b/AspMVCECommerce/Views/Shared/_Layout.cshtml
@@ -478,7 +478,7 @@
                                     <li><a href="~/Account/Login">Track My Order</a></li>
                                 }
 
-                                <li><a href="#">Help</a></li>
+                                <li><a href="~/Home/Help">Help</a></li>
                             </ul>
                         </div>
                     </div>
