create guide on how to manage product, create guide on how to how to create account

--- a/AspMVCECommerce/Views/Home/Help.cshtml
+++ b/AspMVCECommerce/Views/Home/Help.cshtml
@@ -37,8 +37,17 @@
             <div class="col-md-12">
                 <br />
                 <br />
+                <h3>Manage Product</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/ManageProductGuide">How to add, remove, view and update product's</a></span>
+                <br />
+                <br />
+                <h3>Manage Customer Account</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/ManageCustomerAccountGuide">How to register and change password customer account</a></span>
+                <br />
+                <br />
                 <h3>Manage WishList</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/WishlistGuide">How to add, remove and view wishlist product's'</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/WishlistGuide">How to add, remove and view wishlist product's</a></span>
+
                 <br />
                 <br />
                 <h3>Manage Shopping Cart</h3>
@@ -46,9 +55,9 @@
                 <br />
                 <br />
                 <h3>Paypal Payment</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/PaypalAccountGuide">1. How To Create Paypal Test Account</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/PaypalAccountGuide">How To Create Paypal Test Account</a></span>
                 <br />
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/PaypalCreditCardGuide">2. How To Get Fake Credit Card For Paypal</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/PaypalCreditCardGuide">How To Get Fake Credit Card For Paypal</a></span>
             </div>
         </div>
         <!-- /row -->
