--- a/AspMVCECommerce/Views/Home/PaypalAccountGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/PaypalAccountGuide.cshtml
@@ -14,6 +14,7 @@
                 <h3 class="breadcrumb-header">Help Page</h3>
                 <ul class="breadcrumb-tree">
                     <li><a href="~/Home/Index">Home</a></li>
+                    <li><a href="~/Home/Help">Help</a></li>
                     <li class="active">Paypal</li>
                 </ul>
             </div>
