--- a/AspMVCECommerce/Views/Home/ManageCustomerAccountGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/ManageCustomerAccountGuide.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "PaypalCreditCardGuide";
+    ViewBag.Title = "ManageCustomerAccountGuide";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -15,7 +15,7 @@
                 <ul class="breadcrumb-tree">
                     <li><a href="~/Home/Index">Home</a></li>
                     <li><a href="~/Home/Help">Help</a></li>
-                    <li class="active">Paypal</li>
+                    <li class="active">Manage Customer Account</li>
                 </ul>
             </div>
         </div>
@@ -31,35 +31,41 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h1>How To Get Fake Credit Card For Paypal</h1>
+                <h1>Manage Product</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <br />
                 <br />
+                <span style="font-size: 18px; "><b>1.</b> To register new customer account click register button on the top header menu. Enter email and password then click register</span>
 
-                <h3>Follow steps as shown below</h3>
-                <br /><br /><span style="font-size: 18px; margin-left: 20px;"><b>1. </b>Navigate to: <a target="_blank" href="https://ccgen.datagemba.com/credit-card-generator/Philippines">https://ccgen.datagemba.com/credit-card-generator/Philippines</a></span>
-                <br /><br /><span style="font-size: 18px; margin-left: 20px;"><b>2. </b>Select Credit Card Network (Master/Visa)</span>
-                <br /><br /><span style="font-size: 18px; margin-left: 20px;"><b>3. </b>Selected country should be philippines</span>
-                <div class="info-container" style="padding-left: 40px;">
-                    <div class="bd-example">
-                        <div class="alert alert-success" role="alert">
-                            <h4 class="alert-heading">Please Note:</h4>
-
-                            <p class="mb-0">
-                                Selected country should be <b>philippines</b> because our Ecommerce Website only accept shipping address base on philippines
-                            </p>
-                        </div>
-                    </div>
+                <div style="width: 100%; height: 100%; margin: auto; ">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/1 - register new customer.png" alt="login admin account">
                 </div>
-                <span style="font-size: 18px; margin-left: 20px;"><b>4. </b>Click <b>Generate</b> button</span>
-                <br /><br /><span style="font-size: 18px; margin-left: 20px;"><b>5. </b>Get the credit card information next to generate button highlighted on screenshot below</span>
+                <br />
+                <span style="font-size: 18px; margin-left: 20px;">When registration succeed you will see your email on the top header menu  </span>
                 <br /> <br />
-                <div style="width: 1041px; height: 100%;margin-left:20px; ">
-                    <img style="width: 100%; height: 100%;object-fit: scale-down;" src="~/images/9 - generate fake credit card.png" alt="Paypal home page">
+                <div style="width: 100%; height: 100%; margin: auto; ">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/1 - register new customer succeed.png" alt="create new product">
                 </div>
+
+                <br />
+                <span style="font-size: 18px;">
+                    <b>2. </b>To change account password click your email on the top header menu then click Change your password link
+                </span>
+                <br /> <br />
+                <div style="width: 100%; height: 100%; margin: auto; ">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/2 -change customer account password.png" alt="edit product details">
+                </div>
+                <br />
+                <span style="font-size: 18px; margin-left: 20px;">Enter old and new password then click Change Password button</span>
+                <br /> <br />
+                <div style="width: 100%; height: 100%; margin: auto; ">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/2 -change customer account password page.png" alt="create new product">
+                </div>
+                <br />
+
 
 
             </div>
@@ -70,6 +76,8 @@
 
 </div>
 <!-- /SECTION -->
+
+
 <style>
     .info-container .bd-example {
         position: relative;
@@ -126,3 +134,6 @@
         margin-bottom: 0 !important;
     }
 </style>
+
+
+
