--- a/AspMVCECommerce/Views/Products/Create.cshtml
+++ b/AspMVCECommerce/Views/Products/Create.cshtml
@@ -6,29 +6,14 @@
 }
 
 <!-- BREADCRUMB -->
-<div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
-    <div class="container">
-
-        <div class="row pull-left">
-            <div class="col-md-12">
-                <ul class="breadcrumb-tree">
-                    <li> <a href="#" style="font-size: 16px; font-weight: bold; white-space: nowrap;">Manage Product</a></li>
-
-                </ul>
-
-            </div>
-        </div>
-
-    </div>
-
-
-
+<div id="breadcrumb" class="section" >
 
     <!-- container -->
-    <div class="container" style="margin-left: 200px;">
+    <div class="container">
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
+                <h3 class="breadcrumb-header">Manage Product</h3>
                 <ul class="breadcrumb-tree">
                     <li><a href="~/Home/Index">Home</a></li>
                     <li><a href="~/Products/Index">Products</a></li>
@@ -436,7 +421,7 @@
                 $('#PromoSaleOFFPercent').text(percentText1);
 
                 var discountedPrice = parseInt($('#OriginalPrice').val()) - (parseInt($('#OriginalPrice').val()) * parseFloat($("#PromoSaleOFF").val()))
-                $('#DiscountedPrice').text(discountedPrice.toString());
+                $('#DiscountedPrice').text(Math.round(discountedPrice).toString());
                 
             }
 
@@ -451,7 +436,7 @@
                     if (parseFloat(this.value) > 0 && parseFloat(this.value) <= 1) {
 
                         var discountedPrice = parseInt($('#OriginalPrice').val()) - (parseInt($('#OriginalPrice').val()) * parseFloat(this.value));
-                        $('#DiscountedPrice').val(discountedPrice.toString());
+                        $('#DiscountedPrice').val(Math.round(discountedPrice).toString());
 
                         $("#PromoDurationDiv").show();
 
