--- a/AspMVCECommerce/Views/Home/Help.cshtml
+++ b/AspMVCECommerce/Views/Home/Help.cshtml
@@ -38,26 +38,42 @@
                 <br />
                 <br />
                 <h3>Manage Product</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/ManageProductGuide">How to add, remove, view and update product's</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/ManageProductGuide">How to add, remove, view and update product's</a></span>
                 <br />
                 <br />
+
+                <h3>Filter Product</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/FilterProductGuide">How to filter product by brand, price and category</a></span>
+                <br />
+                <br />
+
+                <h3>Search Product</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/SearchProductGuide">How to Search product with filter by category</a></span>
+                <br />
+                <br />
+
+                <h3>Compare Product</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/CompareProductGuide">How to Compare to Related Product</a></span>
+                <br />
+                <br />
+
                 <h3>Manage Customer Account</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/ManageCustomerAccountGuide">How to register and change password customer account</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/ManageCustomerAccountGuide">How to register and change password customer account</a></span>
                 <br />
                 <br />
                 <h3>Manage WishList</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/WishlistGuide">How to add, remove and view wishlist product's</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/WishlistGuide">How to add, remove and view wishlist product's</a></span>
 
                 <br />
                 <br />
                 <h3>Manage Shopping Cart</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/ShoppingCartGuide">How to add, remove, view and checkout shopping cart</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/ShoppingCartGuide">How to add, remove, view and checkout shopping cart</a></span>
                 <br />
                 <br />
                 <h3>Paypal Payment</h3>
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/PaypalAccountGuide">How To Create Paypal Test Account</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/PaypalAccountGuide">How To Create Paypal Test Account</a></span>
                 <br />
-                <span style="font-size: 18px; margin-left: 20px;"><a target="_blank" href="~/home/PaypalCreditCardGuide">How To Get Fake Credit Card For Paypal</a></span>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/PaypalCreditCardGuide">How To Get Fake Credit Card For Paypal</a></span>
             </div>
         </div>
         <!-- /row -->
