--- a/AspMVCECommerce/Views/Home/ShoppingCartGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/ShoppingCartGuide.cshtml
@@ -14,6 +14,7 @@
                 <h3 class="breadcrumb-header">Help Page</h3>
                 <ul class="breadcrumb-tree">
                     <li><a href="~/Home/Index">Home</a></li>
+                    <li><a href="~/Home/Help">Help</a></li>
                     <li class="active">Shopping Cart</li>
                 </ul>
             </div>
@@ -125,9 +126,21 @@
                 </div>
                 <br />
                 <span style="font-size: 18px;">
-                    <b>9. </b>Login paypal account
+                    <b>9. </b>Login paypal account<br />
+                   
                 </span>
-                <br /> <br />
+
+                <div class="info-container" style="padding-left: 20px;">
+                    <div class="bd-example">
+                        <div class="alert alert-success" role="alert">
+                            <h4 class="alert-heading">User Info:</h4>
+
+                            <p class="mb-0">
+                                Check here on how to create test paypal account: <a href="~/Home/PaypalAccountGuide">How to Create Test Paypal Account</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <div style="width: 100%; height: 100%; margin: auto; ">
                     <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/8 - login paypal account.png" alt="remove to cart">
                 </div>
