complete subscribe to newsletter guide

--- a/AspMVCECommerce/Views/Home/Help.cshtml
+++ b/AspMVCECommerce/Views/Home/Help.cshtml
@@ -71,12 +71,19 @@
                 <br />
                 <br />
                 <h3>Paypal Payment</h3>
-                
+
                 <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/PaypalAccountGuide">How To Create Paypal Test Account</a></span>
                 <br />
                 <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/PaypalCreditCardGuide">How To Get Fake Credit Card For Paypal</a></span>
                 <br />
                 <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/PaypalPaywithcreditcardguide">How To Pay With Credit Card on Paypal</a></span>
+
+                <br />
+                <br />
+                <h3>Newsletter Subscription</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/SubscribeToNewsletterGuide">How To Subscribe and Unsubscribe to Newsletter</a></span>
+                <br />
+
             </div>
         </div>
         <!-- /row -->
