--- a/AspMVCECommerce/Views/Home/SubscribeToNewsletterGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/SubscribeToNewsletterGuide.cshtml
@@ -38,57 +38,61 @@
             <div class="col-md-12">
                 <br />
                 <br />
-                <span style="font-size: 18px; "><b>1. </b>Click My Cart button on menu header then click check out</span>
+                <span style="font-size: 18px; "><b>1. </b>To subscribe to newsletter enter your email then click subscribe button on subscribe to newsletter input box located on website page footer</span>
                 <br /><br />
                 <div style="width: 100%; height: 100%; margin: auto; ">
-                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/1 - pay with credit card checkout.png" alt="my cart check out">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/1 - subscribe to newsletter.png" alt="subscribe to newsletter">
                 </div>
-                <br />
-                <span style="font-size: 18px;">
-                    <b>2. </b>Generate Philippine Fake Credit card navigate to: <a target="_blank" href="https://ccgen.datagemba.com/credit-card-generator/Philippines">https://ccgen.datagemba.com/credit-card-generator/Philippines</a> then click generate button to get fake credit card info
-                </span>
+
                 <br /> <br />
                 <div style="width: 100%; height: 100%; margin: auto; ">
-                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/2 - pay with credit card generate fake credit card.png" alt="fake credit card info">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/2 - subscribe to newsletter.png" alt="subscribe to newsletter">
                 </div>
                 <br />
 
                 <span style="font-size: 18px;">
-                    <b>3. </b>Enter fake credit card contact name and address then click place order button
+                    <b>2. </b>You will receive confirmation email. Click the confirmation link button to confirm email
                 </span>
                 <br /> <br />
                 <div style="width: 100%; height: 100%; margin: auto; ">
-                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/3 - pay with credit card enter contact information.png" alt="fake credit card info">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/3 - subscribe to newsletter confirm email.png" alt="subscribe to newsletter confirm email">
                 </div>
                 <br />
 
                 <span style="font-size: 18px;">
-                    <b>4. </b>On Paypal Login Page Click Pay <span style="font-style:italic;font-weight:600;">"Pay with a Bank Account or Credit Card"</span> button
+                    <b>3. </b>When confirmation succeed you will be redirected to our confirmation page with thank you message for subscribing
                 </span>
                 <br /> <br />
                 <div style="width: 100%; height: 100%; margin: auto; ">
-                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/4 - pay with credit card click pay with credit card.png" alt="paypal login page">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/4 - subscribe to newsletter confirmation complete.png" alt="subscribe to newsletter confirmation complete">
                 </div>
                 <br />
 
                 <span style="font-size: 18px;">
-                    <b>5. </b>On Paypal Checkout Page Enter Fake Credit Card info then click <span style="font-style:italic;font-weight:600;">"Continue"</span> button
+                    <b>4. </b>After confirmation you will recieve a weekly email from our website with subject top pick of the weeks as shown below.
                 </span>
                 <br /> <br />
                 <div style="width: 100%; height: 100%; margin: auto; ">
-                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/5 - pay with credit card enter fake credit card info.png" alt="paypal checkout page">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/5 - subscribe to newsletter top picks of the week.png" alt="ubscribe to newsletter top picks of the week">
                 </div>
                 <br />
 
                 <span style="font-size: 18px;">
-                    <b>6. </b>When Paypal Payment with Credit Card Succeed you will be redirected to Order History page as shown below.
+                    <b>5. </b>To stop subscription click the unsubscribe link on the bottom of the top pick of the week email
                 </span>
                 <br /> <br />
                 <div style="width: 100%; height: 100%; margin: auto; ">
-                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/6 - pay with credit card payment succeed.png" alt="paypal payment succeed">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/6 - subscribe to newsletter unsubscribe.png" alt="unsubscribe">
                 </div>
                 <br />
-
+                <span style="font-size: 18px;margin-left:20px;">
+                    When unsubscribe is complete you will be redirected to our unsubscribe page
+                </span>
+                <br /> <br />
+                <div style="width: 100%; height: 100%; margin: auto; ">
+                    <img style="width: 100%; height: 100%;padding-left:20px; object-fit: scale-down;" src="~/images/7 - subscribe to newsletter unsubscribe complete.png" alt="unsubscribe">
+                </div>
+                <br />
             </div>
         </div>
         <!-- /row -->
