add product review help page

--- a/AspMVCECommerce/Views/Home/Help.cshtml
+++ b/AspMVCECommerce/Views/Home/Help.cshtml
@@ -57,6 +57,11 @@
                 <br />
                 <br />
 
+                <h3>Product Reviews</h3>
+                <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/CommentAndRatingGuide">How to Add and View Product Reviews (Comment and Ratings)</a></span>
+                <br />
+                <br />
+
                 <h3>Manage Customer Account</h3>
                 <span style="font-size: 18px; margin-left: 20px;"><a href="~/home/ManageCustomerAccountGuide">How to register and change password customer account</a></span>
                 <br />
