--- a/AspMVCECommerce/Views/Home/ManageCustomerAccountGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/ManageCustomerAccountGuide.cshtml
@@ -31,7 +31,7 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h1>Manage Product</h1>
+                <h1>How to Manage Customer Accoun</h1>
             </div>
         </div>
         <div class="row">
