--- a/AspMVCECommerce/Views/Home/PaypalPayWithCreditCardGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/PaypalPayWithCreditCardGuide.cshtml
@@ -33,7 +33,7 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h1>Paypal Pay with credit card</h1>
+                <h1>How to Pay with credit card on Paypal</h1>
             </div>
         </div>
         <div class="row">
