--- a/AspMVCECommerce/Views/Home/SubscribeToNewsletterGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/SubscribeToNewsletterGuide.cshtml
@@ -31,7 +31,7 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h1>Subscribe to Newsletter</h1>
+                <h1>How to Subscribe and Unsubscribe to Newsletter</h1>
             </div>
         </div>
         <div class="row">
