--- a/AspMVCECommerce/Views/Home/WishListGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/WishListGuide.cshtml
@@ -31,7 +31,7 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h1>Manage Wishlist Product</h1>
+                <h1>How to Manage Wishlist Product</h1>
             </div>
         </div>
         <div class="row">
