--- a/AspMVCECommerce/Views/Home/CompareProductGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/CompareProductGuide.cshtml
@@ -31,7 +31,7 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h1>Compare Product</h1>
+                <h1>How to Compare Related Product</h1>
             </div>
         </div>
         <div class="row">
