--- a/AspMVCECommerce/Views/Home/SearchProductGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/SearchProductGuide.cshtml
@@ -33,7 +33,7 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h1>Search Product</h1>
+                <h1>How to Search Product</h1>
             </div>
         </div>
         <div class="row">
