--- a/AspMVCECommerce/Views/Home/ShoppingCartGuide.cshtml
+++ b/AspMVCECommerce/Views/Home/ShoppingCartGuide.cshtml
@@ -31,7 +31,7 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h1>Manage Shopping Cart</h1>
+                <h1>How to Manage Shopping Cart</h1>
             </div>
         </div>
         <div class="row">
