--- a/AspMVCECommerce/Views/Home/Order.cshtml
+++ b/AspMVCECommerce/Views/Home/Order.cshtml
@@ -18,7 +18,7 @@
             <div class="col-md-12">
                 <h3 class="breadcrumb-header">Order History</h3>
                 <ul class="breadcrumb-tree">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="~/Home/Index">Home</a></li>
                     <li class="active">Order History</li>
                 </ul>
             </div>
