fix store page product card display gaps

--- a/AspMVCECommerce/Views/Shared/_Layout.cshtml
+++ b/AspMVCECommerce/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
 
                 <ul class="header-links pull-left">
                     <li><a href="#"><i class="fa fa-phone"></i> +639969472918</a></li>
-                    <li><a href="#"><i class="fa fa-envelope-o"></i> zjpiraman2018@gmail.com</a></li>
+                    <li><a href="#"><i class="fa fa-envelope-o"></i> zaldyjeg.piraman@gmail.com</a></li>
                     <li><a href="#"><i class="fa fa-map-marker"></i> Malolos City Bulacan</a></li>
                 </ul>
                 @*<ul class="header-links pull-right">
@@ -414,7 +414,7 @@
                             <ul class="footer-links">
                                 <li><a href="#"><i class="fa fa-map-marker"></i>Malolos City Bulacan</a></li>
                                 <li><a href="#"><i class="fa fa-phone"></i>+639969472918</a></li>
-                                <li><a href="#"><i class="fa fa-envelope-o"></i>zjpiraman2018@gmail.com</a></li>
+                                <li><a href="#"><i class="fa fa-envelope-o"></i>zaldyjeg.piraman@gmail.com</a></li>
                             </ul>
                         </div>
                     </div>
