fix product detail page name description overlap

--- a/AspMVCECommerce/Views/Home/Store.cshtml
+++ b/AspMVCECommerce/Views/Home/Store.cshtml
@@ -287,7 +287,7 @@
                             </div>
                             <div class="product-body">
                                 <p class="product-category">@item.Category.Name</p>
-                                <h3 class="product-name" ><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex  product-name-widget2" style="white-space: nowrap;" title="@item.Name">@item.Name</a></h3>
+                                <h3 class="product-name" style="height: 30px;" ><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-namex  product-name-widget2" style="white-space: nowrap;" title="@item.Name">@item.Name</a></h3>
 
 
                                 @if (item.PromoSaleOFF > 0)
